Experimenting with GtkAssistant in GTKMM/C++

--- a/src/src/CMakeLists.txt
+++ b/src/src/CMakeLists.txt
@@ -19,3 +19,30 @@ target_link_libraries(drive crypto)
 target_link_libraries(drive glog)
 target_link_libraries(drive jsoncpp)
 target_link_libraries(drive pthread)
+
+
+# Use PkgConfig to find GTK+
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+
+# Add GTK+ to include and link directories
+include_directories(${GTK3_INCLUDE_DIRS})
+link_directories(${GTK3_LIBRARY_DIRS})
+add_definitions(${GTK3_CFLAGS_OTHER})
+
+add_executable (wizard wizard.c)
+
+target_link_libraries(wizard ${GTK3_LIBRARIES})
+
+
+# Use PkgConfig to find GTKMM
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTKMM REQUIRED gtkmm-3.0)
+
+# Add GTK+ to include and link directories
+include_directories(${GTKMM_INCLUDE_DIRS})
+link_directories(${GTKMM_LIBRARY_DIRS})
+
+add_executable (wizardmm wizard-mm.cpp)
+
+target_link_libraries(wizardmm ${GTKMM_LIBRARIES})
